fixes: some style issues with dark mode and also some variables had been changed on name

--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,15 @@
   --bg__btn-expand: #f2f2f7;
   --color__btn-expand: #181818;
 
-  --bg__modal: #f2f2f7;
-  --bg__modal-input: #fff;
-  --bg__modal-input-border: #c9c9c9;
-  --bg__modal-inputTitle-border: #c9c9c9;
+  --bg-modal: #f2f2f7;
+  --bg-modal-input: #fff;
+  --bg-modal-input-border: #c9c9c9;
+  --bg-modal-inputTitle-border: #c9c9c9;
 
   --bg__blur-navBar: rgba(255, 255, 255, 0.4);
 
   --border__task: #c9c9c9;
+  --bg-task: #fff;
 
   --borderFieldName: #c5c5c5;
   --borderFieldID: #c5c5c5;
@@ -97,7 +98,7 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 12px;
-  background-color: var(--bg__modal);
+  background-color: var(--bg-modal);
   box-shadow: 0 8px 20px 2px rgba(0, 0, 0, 0.3);
   z-index: 99;
 }
@@ -114,22 +115,22 @@ textarea {
   padding: 0 8px;
   font-size: 19px;
   font-weight: 600;
-  border: 2px solid var(--bg__modal-inputTitle-border);
+  border: 2px solid var(--bg-modal-inputTitle-border);
   border-radius: 12px;
   outline: none;
   color: var(--black18);
-  background-color: var(--bg__modal-input);
+  background-color: var(--bg-modal-input);
 }
 
 .modal-newTask-description {
   height: 8rem;
   padding: 12px 8px;
   font-size: 19px;
-  border: 2px solid var(--bg__modal-input-border);
+  border: 2px solid var(--bg-modal-input-border);
   border-radius: 12px;
   outline: none;
   color: var(--black18);
-  background-color: var(--bg__modal-input);
+  background-color: var(--bg-modal-input);
 }
 
 .modal-newTask-description::-webkit-scrollbar {
@@ -198,9 +199,8 @@ textarea {
 .task {
   margin: 18px;
   padding: 1rem;
-  /* border: 1px solid var(--border__task); */
   border-radius: 14px;
-  background-color: var(--ff);
+  background-color: var(--bg-task);
   box-shadow: var(--shadow-task);
 }
 
@@ -243,7 +243,7 @@ textarea {
   bottom: 0;
   height: calc(1.6em * var(--line-height));
   width: 100%;
-  background: linear-gradient(to bottom, transparent, var(--ff));
+  background: linear-gradient(to bottom, transparent, var(--bg-task));
   z-index: 90;
 }
 
@@ -431,10 +431,10 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 12px;
-  background-color: var(--bg__modal);
+  background-color: var(--bg-modal);
   box-shadow: 0 8px 5rem rgba(0, 0, 0, 0.2);
   z-index: 99;
-  background-color: var(--bg__modal);
+  background-color: var(--bg-modal);
 }
 
 .confirmDelete-h4 {
@@ -445,11 +445,10 @@ textarea {
 .confirmDelete-p {
   padding: 12px;
   border-radius: 12px;
-  font-weight: 16px;
   line-height: 1.5;
   text-align: center;
-  border: 1px solid var(--bg__modal-input-border);
-  background-color: var(--bg__modal-input);
+  border: 1px solid var(--bg-modal-input-border);
+  background-color: var(--bg-modal-input);
 }
 
 .confirmDelete-btn-quitModal,
